# py

./: .editorconfig  .gitignore  README.md  pyproject.toml  setup.py  setup.sh
src/core/: __init__.py  logconfig.py
src/project/: main.py
src/project/core/: __init__.py
src/project/utils/: __init__.py  dev.py
src/utils/: __init__.py
