# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[project]
name = "py-project"
version = "0.1.0"
description = "Add project description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
]

# [tool.setuptools.packages.find]
# where = ["src"]
